style: fix container not centered issue

--- a/styles/partials/_layout.scss
+++ b/styles/partials/_layout.scss
@@ -2,13 +2,11 @@
   width: 100%;
   padding-left: 2rem;
   padding-right: 2rem;
+  margin: 0 auto;
   @media screen and (min-width: 1284px) {
     width: 90%;
-    margin: 0 auto;
   }
   @media screen and (min-width: 1600px) {
-    margin: 0 auto;
-    width: 90%;
     max-width: 1400px;
   }
 }
